modules/tests/_kubernetes-policy/fixtures/edge-identity/normal-idm-persistence-wrong-volume/resources.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
  name: identity-kanidm
  namespace: identity
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 10Gi
  storageClassName: ''
  volumeName: wrong-claim
